--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -323,19 +323,6 @@
   }
 }
 
-.table-large-alert {
-  display: none;
-
-  @include mobile-only {
-    display: block;
-    width: 100%;
-    margin: 10px;
-    padding: 5px;
-    color: $warning-color;
-    border-spacing: 0;
-  }
-}
-
 .line-table {
   &:hover {
     background-color: rgba($white-color, 0.2) !important;
